force-app/main/default/objects/Platform_Type_ctrl__c/Platform_Type_ctrl__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>PlatformType Ctrl</description>
    <label>PlatformType Ctrl</label>
</CustomObject>