force-app/main/default/objects/Platform_Type_ctrl__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Class Name</description>
    <label>Class Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>