force-app/main/default/objects/Platform_Type_ctrl__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>This field contains the method name where this Custom Setting is being used</description>
    <label>MethodName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>