force-app/main/default/objects/Platform_Type_ctrl__c/fields/Platforms__c.field-meta.xml
<CustomField>
    <fullName>Platforms__c</fullName>
    <description>Platforms</description>
    <label>Platforms</label>
    <length>50</length>
    <type>Text</type>
</CustomField>